# minBandit

./: README.md  evo_main.py  main.py  slurm_run_main_evo.sh
configs/: config_evo.yaml  config_model.yaml
media/: local
media/20240622_183908/: info.json
media/20240623_041932/: info.json
media/20240624_030044/: info.json
media/rewards_2024_06_29_115903/: info.json  results.json
media/rewards_2024_06_29_120025/: info.json  results.json
media/rewards_2024_07_02_124008/: info.json
media/rewards_2024_07_02_125743/: info.json
media/rewards_2024_07_02_150850/: info.json
media/rewards_2024_07_02_161427/: info.json
media/rewards_2024_07_02_163557/: info.json
media/rewards_2024_07_02_165012/: info.json
media/rewards_2024_07_02_193528/: info.json
media/rewards_2024_07_02_200037/: info.json
media/rewards_2024_07_03_011549/: info.json
media/rewards_2024_07_05_150421/: info.json
media/rewards_2024_07_05_163502/: info.json
media/rewards_2024_07_05_181144/: info.json
media/rewards_2024_07_08_033147/: info.json
media/rewards_2024_07_10_063803_1/: info.json
media/rewards_2024_07_10_064911_1/: info.json
media/rewards_2024_07_10_174532/: info.json
media/rewards_2024_07_10_175555/: info.json
media/simple_2024_07_01_180521/: info_10.json  info_3.json
media/simple_2024_07_02_011851/: info_10.json  info_3.json
media/simple_2024_07_02_014253/: info_3.json
media/simple_2024_07_02_101712/: info_3.json
media/simple_25062024_194404/: results.json
media/simple_26062024_163432/: results.json
media/simple_27062024_200138/: results.json
media/simple_27062024_221232/: results.json
media/smooth2_25062024_182109/: results.json
media/smooth2_25062024_211419/: results.json
media/smooth2_25062024_231113/: results.json
media/smooth2_26062024_155412/: results.json
media/smooth2_26062024_190402/: results.json
media/smooth2_27062024_163707/: results.json
media/smooth2_27062024_200646/: results.json
media/smooth2_27062024_214955/: results.json
media/smooth2_28062024_010320/: results.json
media/smooth2_28062024_174706/: results.json
media/smooth_2024_07_02_114007/: info_1.json
media/smooth_2024_07_10_020707_1/: info_3.json
media/smooth_2024_07_10_020751_1/: info_3.json
notebooks/: lab_1.ipynb  lab_1.py
paper/: _previous_text  acknowledgement.tex  appendix.tex  discussion.tex  introduction.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.synctex(busy)  main.tex  main.toc  methods.tex  minmodel.tex  mkb_bibliography.bib  navmem_refs.bib  notes.md  pdflatex46195.fls  refs.bib  results.tex
paper/_previous/: _previous_text  ecological_task.tex  navmem_refs.bib
src/: _previous.py  entropy_run.py  envs.py  large_run.py  make_plot.py  make_selection_plot.py  models.py  param_search.py  scratch.py  utils.py
src/_evo_cache/: 10_best.json  14_best.json  22_best.json  24_best.json  26_best.json  27_best.json  28_best.json  29_best.json  2_best.json  31_best.json  35_best.json  37_best.json  38_best.json  39_best.json  3_best.json  6_best.json  8_best.json
src/cache/: 10_best.json  12_best.json  14_best.json  16_best.json  18_best.json  1_best.json  20_best.json  2_best.json  3_best.json  4_best.json  6_best.json  8_best.json
src/cpp_core/: CMakeLists.txt
src/cpp_core/include/: core.hpp  utils.hpp
src/cpp_core/src/: binding.cpp  test.cpp
src/data/: entropy_run_20241205-225936.json  entropy_run_20241206-001613.json  entropy_run_20241208-013947.json  entropy_run_20241208-014336.json  entropy_run_20241208-014741.json  (+23 more)
(+1186 files in other folders)
